--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,11 @@
     <description>OWASP Benchmark is a Java test suite designed to evaluate the accuracy, coverage, and speed of automated software vulnerability detection tools.</description>
     <url>https://owasp.org/www-project-benchmark/</url>
 
+    <properties>
+  <sonar.organization>ramvaidya05</sonar.organization>
+  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+</properties>
+    
     <developers>
         <developer>
             <id>davewichers</id>
